# website-docs

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  test.html
.doctrees/: environment.pickle  index.doctree  test.doctree
.doctrees/checklists/: opening.doctree
.doctrees/computing/: index.doctree  telescope-pi.doctree
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/computing/: index.md.txt  telescope-pi.md.txt
checklists/: opening.html
computing/: index.html  telescope-pi.html
docs/: conf.py  index.rst  opening.md  test.md
